--- a/42-Projects/007-pushswap/Makefile
+++ b/42-Projects/007-pushswap/Makefile
@@ -27,8 +27,8 @@ CFLAGS := -Wall -Wextra -Werror -I $(HDR_DIR)
 BCFLAGS := -Wall -Wextra -Werror -I ./bonus/incl
 
 # Source files
-FUN := a_moves.c b_moves.c multi_swap.c merge_swap.c move_swap.c node_swap.c ps_utils.c push_check.c push_index.c push_swap.c push_sol.c solve_swap.c solb_swap.c solc_swap.c solc_utils.c small_swap.c push_big.c print_swap.c push_reset.c opt_swap.c zwap_pivot.c zwap_print.c
-BFUN := checker_bonus.c ps_utils.c push_check.c push_check_bonus.c node_swap.c a_moves.c b_moves.c multi_swap.c    print_swap.c zwap_print.c
+FUN := a_moves.c b_moves.c multi_swap.c merge_swap.c move_swap.c node_swap.c ps_utils.c push_check.c push_index.c push_swap.c push_sol.c solve_swap.c solc_swap.c solc_utils.c small_swap.c print_swap.c opt_swap.c
+BFUN := checker_bonus.c ps_utils.c push_check.c push_check_bonus.c node_swap.c a_moves.c b_moves.c multi_swap.c
 
 # Object files
 OBJ := $(FUN:%.c=$(OBJ_DIR)/%.o)
@@ -62,7 +62,7 @@ clean:
 fclean: clean
 	@$(MAKE) -C $(FTLIB_DIR) --silent fclean
 	@[ -f ./$(NAME) ] && rm $(NAME) || echo Program $(NAME) isn\'t compiled
-	@[ -f ./$(BNAME) ] && rm $(BNAME)|| echo Bonus $(BNAME) isn\'t compiled
+	@[ -f ./$(NAMEB) ] && rm $(NAMEB)|| echo Bonus $(NAMEB) isn\'t compiled
 
 re: fclean all
 
